tests/errors/sem_test_2.py
# sem_test2.py
def main():
    x = "hello"
    y = 5
    z = x + y
    print(z)

main()
